# SDL-cs

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  C2CS.Runtime.xml  CODE_OF_CONDUCT.md  GitVersion.yml  GitVersion_SDL.yml  Install-WindowsSdkISO.ps1  LICENSE  README.md  SDL.cs  SDL.props  SDL.sln  api.txt  bindgen.cmd  bindgen.sh  config.json  ignored.txt  library.cmd  library.sh  nuget.config  version.ps1  version.sh
.github/: dependabot.yml
.github/scripts/: dependencies.sh  get-nuget-package-latest-version.sh  version.ps1
.github/workflows/: bindgen.yml  build-test-pack-deploy.yml  build.yml  build_deploy.yml  commit.yml  devops.yml  pr.yml  sdl.yml  status.yml
ast/: SDL.linux.json  SDL.linux32.json  SDL.linux64.json  SDL.osx.json  SDL.win.json  SDL.win32.json  SDL.win64.json
bindgen/: README.md  appsettings.json  ast_linux.json  ast_osx.json  ast_win.json  bindgen-02-merge.sh  config-build-c-library.json  config-cs.json  config-extract-linux.json  config-extract-macos.json  config-extract-windows.json  config-extract.json  config-generate-cs.json  config-linux.json  config-macos.json  config-windows.json  cs.json  extract.sh  generate.sh  read_c_code.sh  write_csharp_code.sh
bindgen-SDL/: config-build-c-library.json  config-generate-cs.json  extract.sh
bindgen-SDL_image/: config-build-c-library.json  config-extract.json  config-generate-cs.json  header.cs
bindgen-SDL_image/ast/: aarch64-apple-darwin.json  (+1 more)
ext/: README.md  build-native-libraries.sh  build-native-library.sh  download-shadercross.sh
src/c/sdl/: CMakeLists.txt
(+183 files in other folders)
