cmake_minimum_required(VERSION 3.16)

project(sdl C)

set(CMAKE_POLICY_DEFAULT_CMP0054 NEW)
set(CMAKE_C_STANDARD 11)

# Change the output directories for artifacts.
set(OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../../../lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIRECTORY} )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIRECTORY} )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OUTPUT_DIRECTORY} )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

set(SDL_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../../ext/SDL)
add_subdirectory(${SDL_DIRECTORY} ${SDL_DIRECTORY}/build)